updating problem category